[package]
name = "ffcli"
version = "0.1.0"
authors = ["ericdeansanchez <ericdeansanchez@berkeley.edu>"]
documentation = "https://github.com/ericdeansanchez/ffcli"
homepage = "https://github.com/ericdeansanchez/ffcli"
repository = "https://github.com/ericdeansanchez/ffcli"
readme = "README.md"
license = "MIT"
edition = "2018"

[lib]
name = "ffcli"
path = "src/ffcli/lib.rs"

[dependencies]
clap = "2.33.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"