[package]
name = "replicate"
version = "0.1.0"
authors = ["ericdeansanchez <ericdeansanchez@berkeley.edu>"]
documentation = "https://github.com/ericdeansanchez/replicate"
homepage = "https://github.com/ericdeansanchez/replicate"
repository = "https://github.com/ericdeansanchez/replicate"
readme = "README.md"
license = "MIT"
edition = "2018"

[lib]
name = "replicate"
path = "src/replicate/lib.rs"

[dependencies]
clap = "2.33.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"